# azure-attest

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
doc/: attestation_result.md  error.md  token.json
quotes/: open_enclave_ehd.txt  open_enclave_quote.txt  sgx_enclave_quote.txt
src/: config.rs  enclave_info.rs  lib.rs  main.rs  open_enclave.rs  request.rs  sgx_enclave.rs  utils.rs
src/enclaves/: enclave_info.rs  mod.rs  model.rs  open_enclave.rs  sgx_enclave.rs  test_enclave.rs
src/service/: client.rs  maa.rs  mod.rs  pipeline.rs
