[package]
name = "azure-attest"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4"
azure_mgmt_attestation = "0.19.0"
azure_core = "0.19.0"
async-trait = "0.1"
"time" = "0.3.31"
"azure_svc_attestation" = "0.19.0"
tokio = { version = "1", features = ["full"] }
jwt = "0.16.0"

[[bin]]
name = "azure-attest"
path = "bin/main.rs"